scss/partials/_topic.scss
div.topic-list {

  div.topic {
    margin-left: 0px;
    margin-right: 0px;
    margin-top: 5px;
    padding: 22px 0 22px 0;
    min-height: 100px;
    border-bottom: 1px solid #DFDFDF; /* gray */
    background-color: white;

    div.topic-header {
      margin-left: 22px;

      .topic-image {
        width: 28px;
        height: 28px;
        float: left;
      }

      div.topic-title {
        float: left;
        margin-top: 5px;
        margin-left: 12px;
        font-size: 26px;
        font-weight: 600;
        line-height: 0.7;
        color: #2d2d2d;
      }
    }

    div.topic-headline {
      margin-left: 22px;
      font-size: 16px;
      line-height: 1.6;
      color: #444444;
      width: 100%;
      margin-top: 15px;

      &.collapse {
        height: 0px;
      }

      &.chart-header-container {
        div.actual-container {
          h3 {
            margin: 5px 0;
          }
        }
      }

      &.topic-headline-growth {

        div.chart-header-container {
          h3.actual {
            margin: 0px;
          }
        }

        div.charts {
          height: 50px;
          width: 400px;

          div.chart-container.column-chart {
            height: 50px;
            width: 100%;
          }
        }
      }
    }

    div.topic-more {
      margin-top: 10px;
      text-align: center;

      img {
        width: 30px;
        height: 30px;
      }

      i {
        font-size: 6px;
        margin-left: 3px;
        line-height: 1;
        font-weight: 600;
        color: #bababa;
      }
    }

    div.topic-date {
      margin-left: 22px;
      font-size: 12px;
      font-style: italic;
      color: #A6A6A3; /* gray */

      label {
        margin: 0px;
        font-weight: normal;
      }
    }

    div.topic-body {
      position: relative;
      overflow: hidden;
      border: 1px solid transparent;

      & p, & ul {
        margin-left: 22px;
        color: #444444;
        font-weight: normal;
        font-size: 16px;
        line-height: 1.6;
      }

      &:focus,
      &.editing {
        outline: none;
        overflow: hidden;
        cursor: text;
        border: 1px solid black;
      }

      img, ul img, ul ul img {
        width: 100%;
        margin-bottom: 10px;
      }

      h1, h2, h3, h4 {
        font-weight: 600;
        font-size: 17px; 
      }

      &.no-data {
        color: rgba(0, 0, 0, 0.4);
      }

      *::selection {
        background: #C1E7F4;
      }

      *::-moz-selection {
        background: #C1E7F4;
      }

      a {
        font-weight: bold;
        text-decoration: underline;
        color: black;
      }

      &.expanded {
        height: auto;
      }
    }
  }
}

